# servier-de-python-test

./: .gitignore  README.md  pyproject.toml
data/sql/: TRANSACTION.csv  TRANSACTION_SYNTHETIC.csv
notebooks/: python_and_data_engineering_data_exploration.ipynb  sql_data_exploration.ipynb
output/: drug-mentions-00000-of-00001
src/servier_de_python/: io.py  pipeline.py  pipeline_test.py  schemas.py  transforms.py
src/servier_de_python/testing/fixtures/: __init__.py  simple_clinical_trials.csv  simple_drugs.csv  simple_pubmeds.csv
