[project]
name = "servier-de-python"
version = "0.1.0"
description = "Servier Data Engineer Python Test Solutions"
authors = [
    { name = "William Phetsinorath", email = "william.phetsinorath@shikanime.studio" },
]
dependencies = [
    "apache-beam>=2.52.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
notebook = [
    "duckdb>=0.9.2",
    "duckdb-engine>=0.9.4",
    "ipykernel>=6.27.1",
    "jupysql>=0.10.5",
    "toml>=0.10.2",
    "langchain>=0.0.350",
    "pandas>=1.4.3",
    "langchain-experimental>=0.0.47",
    "openai>=1.3.9",
    "matplotlib>=3.8.2",
    "apache-beam[dataframe]>=2.52.0",
]
[tool.pdm]
package-dir = "src"
package-type = "library"

[tool.pdm.dev-dependencies]
dev = ["black[jupyter]>=23.12.0", "isort>=5.13.2"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
